# powertools-lambda-dotnet

./: .gitignore  .gitignore.bak  .gitpod.yml  404.html  AWS.Lambda.Powertools.sln  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE-THIRD-PARTY  MAINTAINERS.md  Makefile  README.md  THIRD-PARTY-LICENSES  mkdocs.yml  package-lock.json  package.json  pyproject.toml  version.json
.aws-sam/: build.toml
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto_assign-issues.yml  auto_assign.yml  boring-cyborg.yml  dependabot.yml  labeler.yml  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yaml  config.yml  documentation-improvements.md  feature_request.md  feature_request.yml  maintenance.yml  rfc.md  rfc.yml  share_your_work.yml  support_powertools.yml
.github/scripts/: constants.js  label_pr_based_on_title.js
.github/workflows/: build.yml  build_changelog.yml  codeql-analysis.yml  dispatch_analytics.yml  docs.yml  e2e-infra-deploy.yml  e2e-infra-destroy.yml  e2e-tests.yml  examples-tests.yml  label_pr_on_title.yml  on_label_added.yml  on_merged_pr.yml  (+14 more)
apidocs/: docfx.json  index.md  toc.yml
buildtools/: build.proj  common.props
docs/: Dockerfile  gatsby-config.js  index.md  package-lock.json  package.json  references.md  requirements.txt  roadmap.md  tenets.md  we_made_this.md
example/: README.md  template.yaml
examples/: AWS.Lambda.Powertools.Examples.sln  examples.sln
libaries/: .gitignore  AWS.Lambda.Powertools.sln
libraries/: .gitignore  AWS.Lambda.Powertools.sln
(+943 files in other folders)
