[tool.poetry]
name = "aws-lambda-powertools-dotnet"
version = "0.1.0"
description = "Python utilities for AWS Lambda functions including but not limited to tracing, logging and custom metric"
authors = ["Amazon Web Services"]

[tool.poetry.dependencies]
python = "^3.9"
mike = "^1.0.1"
mkdocs-material = "^7.2.4"
mkdocs-git-revision-date-plugin = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
